create endpoint for update a post
